--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://biomesu.github.io/website",
+  "homepage": "https://biomesu.github.io",
   "name": "website",
   "version": "0.1.0",
   "private": true,
